Configuración inicial de despliegue en AWS y preparación del frontend React para producción
* Configuración inicial de AWS Amplify
* Definición de región AWS (us-east-1)
* Configuración de build para frontend React
* Ajuste de directorio de salida para compilación
* Preparación de estructura para despliegue cloud
* Integración inicial para hosting y CI/CD
* Organización preliminar para entorno de producción